# Tiktok-TechJam-2025

./: .pre-commit-config.yaml  Problem_statement.md  README.md
.github/actions/setup/: action.yml
.github/workflows/: python-lint.yml  typescript-lint.yml
backend/: README.md  main.py  pyproject.toml
backend_ai/: README.md  anonym.py  main.py  requirements.txt
frontend/: eslint.config.js  index.html  package-lock.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
frontend/src/: index.css
frontend/src/components/: Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  UploadSection.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: Index.tsx
