[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = E203

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
]
